# kip-cli

./: Cargo.toml  README.md  main.rs
.github/workflows/: build&release.yaml
commands/: list.rs  logs.rs  mod.rs  setup.rs
src/: main.rs
src/commands/: logs.rs
