[package]
name = "ktp"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0"
prettytable = "0.10.0"
k8s-openapi = { version = "0.23.0", features = ["v1_29"] }
kube = { version = "0.97.0", features = ["runtime"] }
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8"